# ursa

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  404.html  CONTRIBUTING.md  COPYRIGHT  Dockerfile  README.md  index.html  justfile  mkdocs.yml  objects.inv  paper.md  pyproject.toml  pytest.ini  todo.md
Metrics-Guide/: index.html
Plan-Execute-Runner-Checkpointing-Guide/: index.html
acquisition_agents/: index.html
agents/: index.html
arxiv_agent/: index.html
chat_agent/: index.html
chatollama_setup/: index.html
cli/: index.html
combining_arxiv_and_execution/: index.html
combining_arxiv_and_execution_neutronStar/: index.html
command_line/: index.html
config/: index.html
configs/: cmm_demo_scenarios.json  example.yaml  nd_china_2025_scenarios.json  openai.yaml
configuration/: index.html
contributing/: index.html
data/: attack_goals.md  cs_attack_dataset.jsonl  cs_dataset.jsonl  ms_data_details.md
deep_review_agent/: index.html
dev/: .gitignore  README.md  dev.py  justfile  run.py  test-executor.py  test-planner.py  test-workflow.py  test.py
docs/: Plan-Execute-Runner-Checkpointing-Guide.md  acquisition_agents.md  arxiv_agent.md  chat_agent.md  cli.md  cmm_demo_runbook.md  combining_arxiv_and_execution.md  combining_arxiv_and_execution_neutronStar.md  command_line.md  config.md  contributing.md  critical_minerals_workflow.md  deep_review_agent.md  domain_scientist_setup_and_usage.md  dsi_agent.md  (+20 more)
mcp/molfm/: .gitignore  README.md  pyproject.toml
mcp/molfm/src/molfm_mcp/: cli.py  mist.py  pubchem.py  smiles.py
(+485 files in other folders)
